# multi_factors

./: .gitignore  AGENTS.md  BIAS_AUDIT.md  CLAUDE.md  README.md  RUNBOOK.md  TEST_REPORT.md  pyproject.toml
alpha/: base.py  equal_weight.py  ic_weight.py
analytics/: alphalens_adapter.py  factor.py  performance.py  quantstats_adapter.py
config/: data_update.yaml  data_update_all_a.yaml  example.yaml  example_tushare.yaml  phase2_real_baseline.yaml  phase2_real_baseline_cached.yaml  phase3_real_csi500_generalization.yaml  phase3_real_factor_candidates.yaml  phase3_real_ic_weighted.yaml  phase3_real_independent_validation.yaml  phase3_real_multifactor.yaml  phase3_real_oos_stability.yaml  phase3_real_robustness_matrix.yaml  phase3_real_subset_costs.yaml  phase_c_jump_amount_corr.yaml  phase_d_minute_ideal_amp.yaml  phase_e_amp_marginal_anomaly_vol.yaml  phase_f_volume_peak_count.yaml  phase_g_intraday_amp_cut.yaml  phase_h_peak_interval_kurtosis.yaml  phase_i5a_intraday_tail_framework.yaml  phase_i5b_intraday_execution_feasibility.yaml  phase_i5c_mmp_minute_factor.yaml  phase_i5d_mmp_quintile_5y.yaml  phase_i5e_mmp_quintile_csi300_generalization.yaml  phase_i5f_intraday_liquidity_diagnostics.yaml  phase_i_valley_relative_vwap.yaml  phase_j_valley_ridge_vwap_ratio.yaml  phase_k_ridge_minute_return.yaml  phase_l_valley_price_quantile.yaml  phase_m_peak_ridge_amount_ratio.yaml
data/: availability_policy.py
factors/: base.py  requires.py  spec.py
portfolio/: base.py  construct.py  risk.py
qt/: __init__.py  cli.py  config.py  data_backfill.py  data_update_quality.py  (+31 more)
(+220 files in other folders)
