[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantitative-trading"
version = "0.1.0"
description = "A-share cross-sectional multi-factor quant framework (Phase 0 MVP)"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy",
    "pyarrow",
    "duckdb",
    "pydantic>=2",
    "pydantic-settings",
    "pyyaml",
    "tushare",
    "statsmodels",
    "scikit-learn",
]

[project.optional-dependencies]
analytics = [
    "alphalens-reloaded",
    "quantstats",
    "matplotlib",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
qt = "qt.cli:main"

[tool.setuptools.packages.find]
include = [
    "data*",
    "universe*",
    "factors*",
    "alpha*",
    "portfolio*",
    "runtime*",
    "analytics*",
    "qt*",
]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E501 line-too-long is handled by formatter; keep a pragmatic ignore set.
ignore = [
    "E741",  # ambiguous variable name (l/I/O); common in math code
]
